--- a/index.html
+++ b/index.html
@@ -85,12 +85,19 @@
             <button class="btn btn-dark btn-lg download-button" type="button">
               <i class="fab fa-apple"></i> Download
             </button>
-            <button class="btn btn-outline-light btn-lg download-button" type="button">
+            <button
+              class="btn btn-outline-light btn-lg download-button"
+              type="button"
+            >
               <i class="fab fa-google-play"></i> Download
             </button>
           </div>
           <div class="col-lg-6">
-            <img class="iphone-img img-fluid" src="images/iphone6.png" alt="iphone" />
+            <img
+              class="iphone-img img-fluid"
+              src="images/iphone6.png"
+              alt="iphone"
+            />
           </div>
         </div>
       </div>
@@ -99,14 +106,33 @@
     <!-- Features -->
 
     <section id="features">
-      <h3>Easy to use.</h3>
-      <p>So easy to use, even your dog could do it.</p>
-
-      <h3>Elite Clientele</h3>
-      <p>We have all the dogs, the greatest dogs.</p>
-
-      <h3>Guaranteed to work.</h3>
-      <p>Find the love of your dog's life or your money back.</p>
+      <div class="container-fluid">
+        <div class="row">
+          <div class="col-lg-4">
+            <span class="ft-icon">
+              <i class="fas fa-check-circle fa-3x"></i>
+            </span>
+            <h3 class="ft-head">Easy to use.</h3>
+            <p class="ft-text">So easy to use, even your dog could do it.</p>
+          </div>
+          <div class="col-lg-4">
+            <span class="ft-icon">
+              <i class="fas fa-bullseye fa-3x"></i>
+            </span>
+            <h3 class="ft-head">Elite Clientele</h3>
+            <p class="ft-text">We have all the dogs, the greatest dogs.</p>
+          </div>
+          <div class="col-lg-4">
+            <span class="ft-icon">
+              <i class="fas fa-heart fa-3x"></i>
+            </span> 
+            <h3 class="ft-head">Guaranteed to work.</h3>
+            <p class="ft-text">
+              Find the love of your dog's life or your money back.
+            </p>
+          </div>
+        </div>
+      </div>
     </section>
 
     <!-- Testimonials -->
