--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         </nav>
 
         <!-- Title -->
-        <div class="row">
+        <div class="row title-row">
           <div class="col-lg-6">
             <h1>Meet new and interesting dogs nearby.</h1>
             <button class="btn btn-dark btn-lg download-button" type="button">
@@ -106,57 +106,101 @@
     <!-- Features -->
 
     <section id="features">
-      <div class="container-fluid">
+      
         <div class="row">
-          <div class="col-lg-4">
+          <div class="col-lg-4 col-ft">
             <span class="ft-icon">
-              <i class="fas fa-check-circle fa-3x"></i>
+              <i class="fas fa-check-circle fa-4x"></i>
             </span>
             <h3 class="ft-head">Easy to use.</h3>
             <p class="ft-text">So easy to use, even your dog could do it.</p>
           </div>
-          <div class="col-lg-4">
+          <div class="col-lg-4 col-ft">
             <span class="ft-icon">
-              <i class="fas fa-bullseye fa-3x"></i>
+              <i class="fas fa-bullseye fa-4x"></i>
             </span>
             <h3 class="ft-head">Elite Clientele</h3>
             <p class="ft-text">We have all the dogs, the greatest dogs.</p>
           </div>
-          <div class="col-lg-4">
+          <div class="col-lg-4 col-ft">
             <span class="ft-icon">
-              <i class="fas fa-heart fa-3x"></i>
-            </span> 
+              <i class="fas fa-heart fa-4x"></i>
+            </span>
             <h3 class="ft-head">Guaranteed to work.</h3>
             <p class="ft-text">
               Find the love of your dog's life or your money back.
             </p>
           </div>
         </div>
-      </div>
+      
     </section>
 
     <!-- Testimonials -->
 
     <section id="testimonials">
-      <h2>
-        I no longer have to sniff other dogs for love. I've found the hottest
-        Corgi on TinDog. Woof.
-      </h2>
-      <img src="images/dog-img.jpg" alt="dog-profile" />
-      <em>Pebbles, New York</em>
-
-      <!-- <h2 class="testimonial-text">My dog used to be so lonely, but with TinDog's help, they've found the love of their life. I think.</h2>
-      <img class="testimonial-image" src="images/lady-img.jpg" alt="lady-profile">
-      <em>Beverly, Illinois</em> -->
+      <div
+        id="carouselExampleControls"
+        class="carousel slide"
+        data-ride="false"
+      >
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <h2 class="testimonial-text">
+              I no longer have to sniff other dogs for love. I've found the
+              hottest Corgi on TinDog. Woof.
+            </h2>
+            <img
+              class="testimonial-img"
+              src="images/dog-img.jpg"
+              alt="dog-profile"
+            />
+            <em>Pebbles, New York</em>
+          </div>
+          <div class="carousel-item">
+            <h2 class="testimonial-text">
+              My dog used to be so lonely, but with TinDog's help, they've found
+              the love of their life. I think.
+            </h2>
+            <img
+              class="testimonial-img"
+              src="images/lady-img.jpg"
+              alt="lady-profile"
+            />
+            <em>Beverly, Illinois</em>
+          </div>
+        </div>
+        <a
+          class="carousel-control-prev"
+          href="#carouselExampleControls"
+          role="button"
+          data-slide="prev"
+        >
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a
+          class="carousel-control-next"
+          href="#carouselExampleControls"
+          role="button"
+          data-slide="next"
+        >
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="sr-only">Next</span>
+        </a>
+      </div>
     </section>
 
     <!-- Press -->
 
     <section id="press">
-      <img src="images/techcrunch.png" alt="tc-logo" />
-      <img src="images/tnw.png" alt="tnw-logo" />
-      <img src="images/bizinsider.png" alt="biz-insider-logo" />
-      <img src="images/mashable.png" alt="mashable-logo" />
+      <img class="press-img" src="images/techcrunch.png" alt="tc-logo" />
+      <img class="press-img" src="images/tnw.png" alt="tnw-logo" />
+      <img
+        class="press-img"
+        src="images/bizinsider.png"
+        alt="biz-insider-logo"
+      />
+      <img class="press-img" src="images/mashable.png" alt="mashable-logo" />
     </section>
 
     <!-- Pricing -->
@@ -165,27 +209,63 @@
       <h2>A Plan for Every Dog's Needs</h2>
       <p>Simple and affordable price plans for your and your dog.</p>
 
-      <h3>Chihuahua</h3>
-      <h2>Free</h2>
-      <p>5 Matches Per Day</p>
-      <p>10 Messages Per Day</p>
-      <p>Unlimited App Usage</p>
-      <button type="button">Sign Up</button>
-
-      <h3>Labrador</h3>
-      <h2>$49 / mo</h2>
-      <p>Unlimited Matches</p>
-      <p>Unlimited Messages</p>
-      <p>Unlimited App Usage</p>
-      <button type="button">Sign Up</button>
-
-      <h3>Mastiff</h3>
-      <h2>$99 / mo</h2>
-      <p>Pirority Listing</p>
-      <p>Unlimited Matches</p>
-      <p>Unlimited Messages</p>
-      <p>Unlimited App Usage</p>
-      <button type="button">Sign Up</button>
+      <div class="row">
+        <div class="price-col col-lg-4 col-md-6">
+          <div class="card">
+            <div class="card-header">
+              <h3>Chihuahua</h3>
+            </div>
+            <div class="card-body">
+              <div class="card-title">
+                <h2>Free</h2>
+              </div>
+              <div class="card-text">
+                <p>5 Matches Per Day</p>
+                <p>10 Messages Per Day</p>
+                <p>Unlimited App Usage</p>
+              </div>
+              <button class="btn btn-lg btn-block btn-outline-dark" type="button">Sign Up</button>
+            </div>
+          </div>
+        </div>
+        <div class=" price-col col-lg-4 col-md-6">
+          <div class="card">
+            <div class="card-header">
+              <h3>Labrador</h3>
+            </div>
+            <div class="card-body">
+              <div class="card-title">
+                <h2>$49 / mo</h2>
+              </div>
+              <div class="card-text">
+                <p>Unlimited Matches</p>
+                <p>Unlimited Messages</p>
+                <p>Unlimited App Usage</p>
+              </div>
+              <button class="btn btn-dark btn-block btn-lg " type="button">Sign Up</button>
+            </div>
+          </div>
+        </div>
+        <div class=" price-col col-lg-4">
+          <div class="card">
+            <div class="card-header">
+              <h3>Mastiff</h3>
+            </div>
+            <div class="card-body">
+              <div class="card-title">
+                <h2>$99 / mo</h2>
+              </div>
+              <div class="card-text">
+                <p>Pirority Listing</p>
+                <p>Unlimited Matches</p>
+                <p>Unlimited Messages</p>
+                <p>Unlimited App Usage</p>
+              </div>
+              <button class="btn btn-lg btn-block btn-dark  " type="button">Sign Up</button>
+            </div>
+          </div>
+        </div>
+      </div>
     </section>
 
     <!-- Call to Action -->
