--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
-    <meta charset="utf-8" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
     <title>TinDog</title>
 
     <!-- Google fonts -->
@@ -66,13 +67,13 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ml-auto">
               <li class="nav-item">
-                <a class="nav-link" href="">Contact</a>
+                <a class="nav-link" href="#footer">Contact</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="">Pricing</a>
+                <a class="nav-link" href="#pricing">Pricing</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="">Download</a>
+                <a class="nav-link" href="#cta">Download</a>
               </li>
             </ul>
           </div>
@@ -271,15 +272,31 @@
     <!-- Call to Action -->
 
     <section id="cta">
-      <h3>Find the True Love of Your Dog's Life Today.</h3>
-      <button type="button">Download</button>
-      <button type="button">Download</button>
+      <h3 class="cta-text">Find the True Love of Your Dog's Life Today.</h3>
+      <button class= "btn btn-lg btn-dark download-button"  type="button">
+        <i class="fab fa-apple"></i> Download
+      </button>
+      <button class= "btn btn-lg btn-light download-button"  type="button">
+        <i class="fab fa-google-play"></i> Download
+      </button>
     </section>
 
     <!-- Footer -->
 
     <footer id="footer">
-      <p>© Copyright 2018 TinDog</p>
+      <span class="footer-icon">
+        <i class="fab fa-twitter"></i>
+      </span>
+      <span class="footer-icon">
+        <i class="fab fa-facebook-f"></i>
+      </span>
+      <span class="footer-icon">
+        <i class="fab fa-instagram"></i>
+      </span>
+      <span class="footer-icon">
+        <i class="fas fa-envelope"></i> 
+      </span>
+      <p class="footer-text">© Copyright 2018 TinDog</p>
     </footer>
   </body>
 </html>
