--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         <!-- Title -->
         <div class="row title-row">
           <div class="col-lg-6">
-            <h1>Meet new and interesting dogs nearby.</h1>
+            <h1 class="title-heading">Meet new and interesting dogs nearby.</h1>
             <button class="btn btn-dark btn-lg download-button" type="button">
               <i class="fab fa-apple"></i> Download
             </button>
